--- a/.github/workflows/readme-recent-activity.yml
+++ b/.github/workflows/readme-recent-activity.yml
@@ -11,7 +11,14 @@ jobs:
     name: Update this repo's README with recent activity
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+      
+      - name: Setup node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 'v14.4.0'
+          registry-url: 'https://registry.npmjs.org'
+      
       - uses: Jadhielv/github-activity-readme@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
